# Parallel-Minhash-in-C

./: .gitignore  README  README.md  read.me
docs/: test.txt
documenti progetto/: .~lock.cache_misses.odt#  .~lock.relazione.odt#  .~lock.test_data.ods#  Presentazione.odp  cache_misses.odt  relazione.odt  tempi_test_dati_completi.ods  tempi_test_dati_completi.xlsx  test_data.ods
linear/: test_main
omp/: CMakeLists.txt  documents_getters.c  documents_getters.h  get_similarities.c  get_similarities.h  hash_FNV_1.c  hash_FNV_1.h  hashmap.c  main.c  shingle_extract.c  shingle_extract.h  shingle_extract_omp.c  shingle_extract_omp.h  test  test_main_omp  test_main_omp.c  time_test.c  time_test.h  tokenizer.c  tokenizer.h
omp/docs/: doc.txt  doclungo.txt
pthread_prod_cons/: documents_getters.c  documents_getters.h  get_similarities.c  get_similarities.h  hash_FNV_1.c  hash_FNV_1.h  main  main.c  minHash.c  minhash.c  minhash.h  prod_cons.c  prod_cons.h  queue.c  queue.h  results_omp.txt  results_pthreads_prod_cons.txt  shingle_extract.c  shingle_extract.h  similarity_results.txt  test.sh  time_log.csv  time_log.txt  time_test.c  time_test.h  tokenizer.c  tokenizer.h
pthreads/: .gitignore  documents_getters.c  documents_getters.h  get_similarities.c  get_similarities.h  hash_FNV_1.c  hash_FNV_1.h  main.c  shingle_extract.c  shingle_extract.h  time_test.c  time_test.h  tokenizer.c  tokenizer.h
scripts/: .~lock.omp_time_log.csv#  Makefile  minhash.sh  omp  pthread  pthread_prod_cons  serial
serial/: documents_getters.c  documents_getters.h  get_similarities.c  main  (+15 more)
(+2846 files in other folders)
